--- a/aud/desktop.ini
+++ b/aud/desktop.ini
@@ -1,3 +1,4 @@
 [LocalizedFileNames]
 577068__qubodup__simple-seamless-music-loop.wav=@577068__qubodup__simple-seamless-music-loop.wav,0
 piano.wav=@piano.wav,0
+85703__tmkappelt__pencil_scibble.mp3=@85703__tmkappelt__pencil_scibble.mp3,0
